--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>SharkEC 靜態切版範例</title>
+    <title>潮健康 COOL HEALTH</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,11 +34,20 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-container">
+        <h1>
+            <img src="">
+        </h1>
     </header>
-    <section>
-    </section>
-    <footer>
+    <main class="conatiner">
+        <section class="news">
+        </section>
+        <section class="cool-fashion">
+        </section>
+        <section class="hot-video"></section>
+        <section class="cool-expert"></section>
+    </main>
+    <footer class="footer-container">
     </footer>
 </body>
 
