--- a/index.html
+++ b/index.html
@@ -33,11 +33,39 @@
     <script type="text/javascript" src="js/theme.js"></script>
 </head>
 
-<body>
-    <header class="header-container">
-        <h1>
-            <img src="">
-        </h1>
+<body data-is-lazy="false">
+    <header class="hdr">
+        <div class="hdr-container">
+            <div class="nav-section">
+                <div class="nav-container">
+                    <nav class="nav-list">
+                        <a href="#" class="nav-item nav-item-news">最新文章</a>
+                        <a href="#" class="nav-item nav-item-fashion">潮爆新資</a>
+                        <a href="#" class="nav-item nav-item-tech">科技潮品</a>
+                        <a href="#" class="nav-item nav-item-aesthetic">醫美專欄</a>
+                        <a href="#" class="nav-item nav-item-fittness">運動健身</a>
+                        <a href="#" class="nav-item nav-item-expert">潮健專家</a>
+                    </nav>
+                    <div class="social-list">
+                        <a href="#"><img src="src/images/cool-health/social/cool-health_material-08.svg"></a>
+                        <a href="#"><img src="src/images/cool-health/social/cool-health_material-09.svg"></a>
+                        <a href="#"><img src="src/images/cool-health/social/cool-health_material-10.svg"></a>
+                        <a href="#"><img src="src/images/cool-health/social/cool-health_material-11.svg"></a>
+                    </div>
+                </div>
+                <div class="hover-icon">
+                    <img src="src/images/cool-health/navigation/cool-health_material-04.svg">
+                </div>
+            </div>
+            <div class="logo-container">
+                <h1 class="logo">
+                    <a><img src="src/images/cool-health/logo/cool-health_material-01.svg"></a>
+                </h1>
+                <label class="search">
+                    <input type="text">
+                </label>
+            </div>
+        </div>
     </header>
     <main class="conatiner">
         <section class="news">
