--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
     <link href="css/base-theme.css?t=20200405" rel="stylesheet" type="text/css">
     </link>
     <link href="css/cutomer-theme.css?t=20200405" rel="stylesheet" type="text/css">
