--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="owl-carousel promote-list">
                 <div class="item">
                     <div class="promote-slide-item promote-slide-item-gender img(m)">
-                        <img src="images/banner/4.jpg" />
+                        <img src="https://coolhealth.sharkcdn.io/blog/965a08a75e1d32ca939605b49ea9251b92e11746.jpg" />
                         <div class="promote-slide-title">
                             <P>標題假字標題假字</P>
                             <P>標題假字標題假字標題假</P>
@@ -101,7 +101,7 @@
                 </div>
                 <div class="item">
                     <div class="promote-slide-item promote-slide-item-fashion img(m)">
-                        <img src="images/banner/1.jpg" />
+                        <img src="https://coolhealth.sharkcdn.io/blog/965a08a75e1d32ca939605b49ea9251b92e11746.jpg" />
                         <div class="promote-slide-title">
                             <P>標題假字標題假字</P>
                             <P>標題假字標題假字標題假</P>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="item">
                     <div class="promote-slide-item promote-slide-item-fittness img(m)">
-                        <img src="images/banner/2.jpg" />
+                        <img src="https://coolhealth.sharkcdn.io/blog/965a08a75e1d32ca939605b49ea9251b92e11746.jpg" />
                         <div class="promote-slide-title">
                             <P>標題假字標題假字</P>
                             <P>標題假字標題假字標題假</P>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="item">
                     <div class="promote-slide-item promote-slide-item-tech img(m)">
-                        <img src="images/banner/3.jpg" />
+                        <img src="https://coolhealth.sharkcdn.io/blog/965a08a75e1d32ca939605b49ea9251b92e11746.jpg" />
                         <div class="promote-slide-title">
                             <P>標題假字標題假字</P>
                             <P>標題假字標題假字標題假</P>
@@ -128,7 +128,7 @@
                 </div>
                 <div class="item">
                     <div class="promote-slide-item promote-slide-item-aesthetic img(m)">
-                        <img src="images/banner/4.jpg" />
+                        <img src="https://coolhealth.sharkcdn.io/blog/965a08a75e1d32ca939605b49ea9251b92e11746.jpg" />
                         <div class="promote-slide-title">
                             <P>標題假字標題假字</P>
                             <P>標題假字標題假字標題假</P>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="item">
                     <div class="promote-slide-item promote-slide-item-aesthetic img(m)">
-                        <img src="images/banner/4.jpg" />
+                        <img src="https://coolhealth.sharkcdn.io/blog/965a08a75e1d32ca939605b49ea9251b92e11746.jpg" />
                         <div class="promote-slide-title">
                             <P>標題假字標題假字</P>
                             <P>標題假字標題假字標題假</P>
