--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <body data-is-lazy="false" id="body">
     <header class="hdr" id="hdr">
         <div class="hdr-container">
-            <h1 class="logo">
+            <div class="logo">
                 <a href="#"><img src="images/logo/IDAH-web-01.png"></a>
-            </h1>
+            </div>
             <div id="menuList" class="nav-section">
                 <div class="nav-container">
                     <img id="btnMenuClose" class="btn-menu-close" src="images/icon/icon-times-gray.svg"></img>
@@ -189,39 +189,290 @@
             <div class="owl-carousel banner-list">
                 <div class="item">
                     <div class="banner-slide-item">
+                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
                         <img src="images/sample/IDAH-web-04.jpg" />
                     </div>
                 </div>
                 <div class="item">
                     <div class="banner-slide-item">
+                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
                         <img src="images/sample/IDAH-web-04.jpg" />
                     </div>
                 </div>
                 <div class="item">
                     <div class="banner-slide-item">
+                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
                         <img src="images/sample/IDAH-web-04.jpg" />
                     </div>
                 </div>
             </div>
         </section>
-        <section class="banner">
-            <div class="owl-carousel banner-list">
-                <div class="item">
-                    <div class="banner-slide-item">
-                        <img src="images/sample/IDAH-web-04.jpg" />
+        <section class="intro">
+            <div class="intro-title">
+                60 IDAH is a total solution provider for feed and food production.
+            </div>
+            <div class="intro-sub-title">
+                28 As the worldwide leader in providing aqua feed production machines, IDAH has the largest market share
+                in
+                shrimp feed processing. Our core products and services include: Consultancy, Education, R&D prototyping,
+                Turnkey Solutions, Single Machine, Spare Parts, and After Services.
+            </div>
+            <div class="intro-article">
+                <div class="intro-section">
+                    16 As the worldwide leader in providing aqua feed production machines, IDAH has the largest market
+                    share in shrimp feed processing. Our core products
+                    and services include: Consultancy, Education, R&D prototyping, Turnkey Solutions, Single Machine,
+                    Spare Parts, and After Services. As the worldwide
+                    leader in providing aqua feed production machines, IDAH has the largest market share in shrimp feed
+                    processing.
+                </div>
+                <div class="intro-section">
+                    Our core products and services include: Consultancy, Education, R&D prototyping, Turnkey Solutions,
+                    Single Machine, Spare Parts, and After Services.
+                    providing aqua feed production machines, IDAH has the largest market share in shrimp feed
+                    processing. Our core products and services include:
+                    Consultancy, Education, R&D prototyping, Turnkey Solutions, Single Machine, Spare Parts, and After
+                    Services.
+                </div>
+            </div>
+        </section>
+        <section class="product">
+            <div class="product-title">60 PRODUCT</div>
+            <div class="product-list">
+                <a class="product-item">
+                    <div class="product-item-display">
+                        <img class="product-img" src="images/sample/IDAH-web-08.jpg">
+                        <div class="product-category">Pelleting</div>
+                    </div>
+                    <div class="product-item-hover">
+                        <div class="product-info">
+                            <div class="product-intro">
+                                28 Grinding, Pulverizing,
+                                Crumbling
+                            </div>
+                            <div class="product-desc">16 Complete milling solutions to fulll
+                                any kinds of particle reduction
+                                requirements for powder and pellets
+                            </div>
+                        </div>
+                        <div class="product-view">VIEW</div>
+                    </div>
+                </a>
+                <a class="product-item">
+                    <div class="product-item-display">
+                        <img class="product-img" src="images/sample/IDAH-web-09.jpg">
+                        <div class="product-category">Pelleting</div>
+                    </div>
+                    <div class="product-item-hover">
+                        <div class="product-info">
+                            <div class="product-intro">
+                                28 Grinding, Pulverizing,
+                                Crumbling
+                            </div>
+                            <div class="product-desc">16 Complete milling solutions to fulll
+                                any kinds of particle reduction
+                                requirements for powder and pellets
+                            </div>
+                        </div>
+                        <div class="product-view">VIEW</div>
+                    </div>
+                </a>
+                <a class="product-item">
+                    <div class="product-item-display">
+                        <img class="product-img" src="images/sample/IDAH-web-10.jpg">
+                        <div class="product-category">Pelleting</div>
+                    </div>
+                    <div class="product-item-hover">
+                        <div class="product-info">
+                            <div class="product-intro">
+                                28 Grinding, Pulverizing,
+                                Crumbling
+                            </div>
+                            <div class="product-desc">16 Complete milling solutions to fulll
+                                any kinds of particle reduction
+                                requirements for powder and pellets
+                            </div>
+                        </div>
+                        <div class="product-view">VIEW</div>
+                    </div>
+                </a>
+                <a class="product-item">
+                    <div class="product-item-display">
+                        <img class="product-img" src="images/sample/IDAH-web-08.jpg">
+                        <div class="product-category">Pelleting</div>
+                    </div>
+                    <div class="product-item-hover">
+                        <div class="product-info">
+                            <div class="product-intro">
+                                28 Grinding, Pulverizing,
+                                Crumbling
+                            </div>
+                            <div class="product-desc">16 Complete milling solutions to fulll
+                                any kinds of particle reduction
+                                requirements for powder and pellets
+                            </div>
+                        </div>
+                        <div class="product-view">VIEW</div>
+                    </div>
+                </a>
+                <a class="product-item">
+                    <div class="product-item-display">
+                        <img class="product-img" src="images/sample/IDAH-web-09.jpg">
+                        <div class="product-category">Pelleting</div>
+                    </div>
+                    <div class="product-item-hover">
+                        <div class="product-info">
+                            <div class="product-intro">
+                                28 Grinding, Pulverizing,
+                                Crumbling
+                            </div>
+                            <div class="product-desc">16 Complete milling solutions to fulll
+                                any kinds of particle reduction
+                                requirements for powder and pellets
+                            </div>
+                        </div>
+                        <div class="product-view">VIEW</div>
+                    </div>
+                </a>
+                <a class="product-item">
+                    <div class="product-item-display">
+                        <img class="product-img" src="images/sample/IDAH-web-10.jpg">
+                        <div class="product-category">Pelleting</div>
+                    </div>
+                    <div class="product-item-hover">
+                        <div class="product-info">
+                            <div class="product-intro">
+                                28 Grinding, Pulverizing,
+                                Crumbling
+                            </div>
+                            <div class="product-desc">16 Complete milling solutions to fulll
+                                any kinds of particle reduction
+                                requirements for powder and pellets
+                            </div>
+                        </div>
+                        <div class="product-view">VIEW</div>
+                    </div>
+                </a>
+            </div>
+        </section>
+        <section class="service">
+            <div class="service-container">
+                <div class="service-title-container">
+                    <div class="service-title">60 SERVICE</div>
+                    <div class="service-intro">
+                        16 Making “protable feeds” is not just about
+                        how single machinery performs but others
+                        like reasonable process ow for chosen
+                        products, formulation designed for local
+                        conditions, and plant management that
+                        covers quality control and equipment
+                        operations are also important.
                     </div>
                 </div>
-                <div class="item">
-                    <div class="banner-slide-item">
-                        <img src="images/sample/IDAH-web-04.jpg" />
+                <div class="service-list jCollapse">
+                    <div class="service-item">
+                        <div class="service-topic-container jCollapseTopic">
+                            <div class="service-icon-arrow"></div>
+                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-icon-hand"></div>
+                        </div>
+                        <div class="service-desc-container jCollapseContent">
+                            <div class="service-desc">
+                                16 Training courses All training courses discussed in Home
+                                partsandservices trainingcourses can be arranged at customer sites.
+                                New product development Specialists in IDAH are happy to assist to
+                                develop new products with customers. In fact, many of the great
+                                ideas are all born from customers.
+                            </div>
+                            <div class="service-read-more">
+                                <button class="servie-btn-read-more">READ MROE</button>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="item">
-                    <div class="banner-slide-item">
-                        <img src="images/sample/IDAH-web-04.jpg" />
+                    <div class="service-item">
+                        <div class="service-topic-container jCollapseTopic">
+                            <div class="service-icon-arrow"></div>
+                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-icon-hand"></div>
+                        </div>
+                        <div class="service-desc-container jCollapseContent">
+                            <div class="service-desc">
+                                16 Training courses All training courses discussed in Home
+                                partsandservices trainingcourses can be arranged at customer sites.
+                                New product development Specialists in IDAH are happy to assist to
+                                develop new products with customers. In fact, many of the great
+                                ideas are all born from customers.
+                            </div>
+                            <div class="service-read-more">
+                                <button class="servie-btn-read-more">READ MROE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-topic-container jCollapseTopic">
+                            <div class="service-icon-arrow"></div>
+                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-icon-hand"></div>
+                        </div>
+                        <div class="service-desc-container jCollapseContent">
+                            <div class="service-desc">
+                                16 Training courses All training courses discussed in Home
+                                partsandservices trainingcourses can be arranged at customer sites.
+                                New product development Specialists in IDAH are happy to assist to
+                                develop new products with customers. In fact, many of the great
+                                ideas are all born from customers.
+                            </div>
+                            <div class="service-read-more">
+                                <button class="servie-btn-read-more">READ MROE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-topic-container jCollapseTopic">
+                            <div class="service-icon-arrow"></div>
+                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-icon-hand"></div>
+                        </div>
+                        <div class="service-desc-container jCollapseContent">
+                            <div class="service-desc">
+                                16 Training courses All training courses discussed in Home
+                                partsandservices trainingcourses can be arranged at customer sites.
+                                New product development Specialists in IDAH are happy to assist to
+                                develop new products with customers. In fact, many of the great
+                                ideas are all born from customers.
+                            </div>
+                            <div class="service-read-more">
+                                <button class="servie-btn-read-more">READ MROE</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="service-item">
+                        <div class="service-topic-container jCollapseTopic">
+                            <div class="service-icon-arrow"></div>
+                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-icon-hand"></div>
+                        </div>
+                        <div class="service-desc-container jCollapseContent">
+                            <div class="service-desc">
+                                16 Training courses All training courses discussed in Home
+                                partsandservices trainingcourses can be arranged at customer sites.
+                                New product development Specialists in IDAH are happy to assist to
+                                develop new products with customers. In fact, many of the great
+                                ideas are all born from customers.
+                            </div>
+                            <div class="service-read-more">
+                                <button class="servie-btn-read-more">READ MROE</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="solution">
+        </section>
+        <section class="news">
+        </section>
+        <section class="contact">
         </section>
     </main>
 
