--- a/index.html
+++ b/index.html
@@ -384,9 +384,7 @@
                                 develop new products with customers. In fact, many of the great
                                 ideas are all born from customers.
                             </div>
-                            <div class="service-read-more">
-                                <button class="servie-btn-read-more">READ MROE</button>
-                            </div>
+                            <a class="service-btn-read-more">READ MROE</a>
                         </div>
                     </div>
                     <div class="service-item">
@@ -403,9 +401,7 @@
                                 develop new products with customers. In fact, many of the great
                                 ideas are all born from customers.
                             </div>
-                            <div class="service-read-more">
-                                <button class="servie-btn-read-more">READ MROE</button>
-                            </div>
+                            <button class="service-btn-read-more">READ MROE</button>
                         </div>
                     </div>
                     <div class="service-item">
@@ -422,9 +418,7 @@
                                 develop new products with customers. In fact, many of the great
                                 ideas are all born from customers.
                             </div>
-                            <div class="service-read-more">
-                                <button class="servie-btn-read-more">READ MROE</button>
-                            </div>
+                            <button class="service-btn-read-more">READ MROE</button>
                         </div>
                     </div>
                     <div class="service-item">
@@ -441,9 +435,7 @@
                                 develop new products with customers. In fact, many of the great
                                 ideas are all born from customers.
                             </div>
-                            <div class="service-read-more">
-                                <button class="servie-btn-read-more">READ MROE</button>
-                            </div>
+                            <button class="service-btn-read-more">READ MROE</button>
                         </div>
                     </div>
                     <div class="service-item">
@@ -460,9 +452,7 @@
                                 develop new products with customers. In fact, many of the great
                                 ideas are all born from customers.
                             </div>
-                            <div class="service-read-more">
-                                <button class="servie-btn-read-more">READ MROE</button>
-                            </div>
+                            <button class="service-btn-read-more">READ MROE</button>
                         </div>
                     </div>
                 </div>
